Documentation Update for 3.11.0

--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
                 <p><a class="btn btn-default" href="/marten/documentation/events" role="button">View details &raquo;</a></p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12 text-center spacer">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="mb-4">Check out video introduction by Jeremy D. Miller:</h2>
+                <p>
+                    <br />
+                    <iframe id="video-content" src="https://channel9.msdn.com/Events/dotnetConf/2018/S315/player" allowFullScreen frameBorder="0" title="Marten: Postgresql backed Document Db and Event Store for .NET Development - Microsoft Channel 9 Video"></iframe>
+                </p>
+            </div>
+        </div>
         <hr>
     </div> <!-- /container -->
     <footer>
