--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -55,8 +55,8 @@
         <div class="text-vertical-center">
             <img src="/content/images/banner.png" width="80%" align="middle" />
             <h1 style="color:white">Marten</h1>
-            <h3>PostgreSQL as Document Db &amp; Event Store for .NET Development</h3>
-            <h2>Polyglot Persistence for .NET Systems using the Rock Solid PostgreSQL Database</h2>
+            <h3>.NET Transactional Document DB and Event Store on PostgreSQL</h3>
+            <h2>.NET Transactional Document DB and Event Store on PostgreSQL</h2>
             <p class="lead">
                 <a href="https://ci.appveyor.com/project/jasper-ci/marten/history"><img src="https://ci.appveyor.com/api/projects/status/github/jasperfx/marten?svg=true"></img></a>
                 <a href="https://www.nuget.org/packages/Marten/"><img src="https://badgen.net/nuget/v/marten"></img></a>
