Documentation Update for 3.12.3

--- a/documentation/events/projections/projectionbyeventtype/index.html
+++ b/documentation/events/projections/projectionbyeventtype/index.html
@@ -48,7 +48,7 @@
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </li>
                     <li><a href="/documentation/events/projections/custom" title="Custom Projections">Previous</a></li>
-                <li><a href="/documentation/troubleshoot" title="FAQ & Troubleshooting">Next</a></li>
+                <li><a href="/documentation/events/versioning" title="Events Versioning">Next</a></li>
                 </ul>
                 <div class="navbar-form navbar-left" role="search">
                     <div class="form-group">
@@ -73,7 +73,7 @@
                 <img src="/content/images/emblem.png" width="80%" align="middle" />
                 <br />
                 <ul class="nav nav-stacked affix" id="sidebar"></ul>
-                <h3 class="no-margin">Next</h3><p><a href="/documentation/troubleshoot">FAQ & Troubleshooting</a></p>
+                <h3 class="no-margin">Next</h3><p><a href="/documentation/events/versioning">Events Versioning</a></p>
                     <h3 class="no-margin">Previous</h3><a href="/documentation/events/projections/custom">Custom Projections</a></p>
                 </ul>
             </div><!--/left-->
@@ -102,7 +102,7 @@
                         <strong>Previous: </strong><a href="/documentation/events/projections/custom">Custom Projections</a>
                     </span>
                     <span class="pull-right">
-                        <strong>Next: </strong><a href="/documentation/troubleshoot">FAQ & Troubleshooting</a>
+                        <strong>Next: </strong><a href="/documentation/events/versioning">Events Versioning</a>
                     </span>
                 </nav>
             </div><!--/right-->
