Update `Edit on GitHub` link base url to use 3.x branch [skip ci]
Update `Edit on GitHub` docs site url to point to 3.x branch rather than master

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -46,7 +46,7 @@
                 <a href="https://www.nuget.org/packages/Marten/" onclick=$("#menu-close").click();>NuGet Downloads</a>
             </li>
             <li>
-                <a href="https://github.com/jasperfx/marten/blob/master/documentation/<[FilePath]>" class="fa fa-github">Edit on GitHub</a>
+                <a href="https://github.com/jasperfx/marten/blob/3.13/documentation/<[FilePath]>" class="fa fa-github">Edit on GitHub</a>
             </li>
         </ul>
     </nav>
